force-app/main/default/objects/Subscriptions__c/Subscriptions__c.object-meta.xml
<CustomObject>
    <label>Subscriptions</label>
    <nameField>
        <displayFormat>SUB-{00000}</displayFormat>
        <label>Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>