force-app/main/default/objects/Subscriptions__c/fields/Billwerk_Subscription_Page__c.field-meta.xml
<CustomField>
    <fullName>Billwerk_Subscription_Page__c</fullName>
    <formula>&quot;https://admin.billwerk.plus/#/rp/subscriptions/subscription/&quot;&amp;Subscription_handle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billwerk Subscription Page</label>
    <type>Text</type>
</CustomField>