force-app/main/default/objects/Subscriptions__c/fields/Current_Subscription_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Current_Subscription_Period_Start__c</fullName>
    <label>Current Subscription Period Start</label>
    <type>DateTime</type>
</CustomField>