force-app/main/default/objects/Subscriptions__c/fields/Is_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Is_Cancelled__c</fullName>
    <formula>IF( ISPICKVAL(Subscriptions_Status__c, &quot;Cancelled&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Cancelled</label>
    <type>Checkbox</type>
</CustomField>