force-app/main/default/objects/Subscriptions__c/fields/Is_First_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is First Invoice</label>
    <type>Checkbox</type>
</CustomField>