force-app/main/default/objects/Subscriptions__c/fields/Is_Renewal_Next_Month__c.field-meta.xml
<CustomField>
    <fullName>Is_Renewal_Next_Month__c</fullName>
    <description>This field only checks if Next Renewal Date is Next Month. It does not account for cancellations, expirations or anything else that may affect whether a Subscription will actually renew.</description>
    <formula>OR(
  /* renewal next month, same year */
  AND(
    MONTH(TODAY()) &lt;&gt; 12,
    MONTH(DATEVALUE(Next_Renewal_Date__c)) = MONTH(TODAY()) + 1,
    YEAR(DATEVALUE(Next_Renewal_Date__c))  = YEAR(TODAY())
  ),
  /* renewal in January next year when today is December */
  AND(
    MONTH(TODAY()) = 12,
    MONTH(DATEVALUE(Next_Renewal_Date__c)) = 1,
    YEAR(DATEVALUE(Next_Renewal_Date__c))  = YEAR(TODAY()) + 1
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field only checks if Next Renewal Date is Next Month. It does not account for cancellations, expirations or anything else that may affect whether a Subscription will actually renew.</inlineHelpText>
    <label>Is Renewal Next Month</label>
    <type>Checkbox</type>
</CustomField>