force-app/main/default/objects/Subscriptions__c/fields/Is_Renewed__c.field-meta.xml
<CustomField>
    <fullName>Is_Renewed__c</fullName>
    <formula>IF(
    AND(
        Trial_End_Date__c &lt;= NOW(),
        OR(
            ISBLANK(Cancellation_Date__c),
            Cancellation_Date__c &gt; Trial_End_Date__c
        ),
        Total_Subscription_Amount__c &gt;= Plan_Amount__c
    ),
    TRUE,
    FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Renewed</label>
    <type>Checkbox</type>
</CustomField>