force-app/main/default/objects/Subscriptions__c/fields/Is_Synced_to_Marketing_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Is_Synced_to_Marketing_Cloud__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the record has already been synchronized with Marketing Cloud. This field is updated during sync processes to track the synchronization status and ensure only the correct records are processed.</description>
    <inlineHelpText>Indicates whether the record has already been synchronized with Marketing Cloud. This field is updated during sync processes to track the synchronization status and ensure only the correct records are processed.</inlineHelpText>
    <label>Is Synced to Marketing Cloud</label>
    <type>Checkbox</type>
</CustomField>