force-app/main/default/objects/Subscriptions__c/fields/Is_Trial__c.field-meta.xml
<CustomField>
    <fullName>Is_Trial__c</fullName>
    <formula>IF( ISPICKVAL(Subscriptions_Status__c, &quot;Trial&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Trial</label>
    <type>Checkbox</type>
</CustomField>