force-app/main/default/objects/Subscriptions__c/fields/Market_Unit_Formula__c.field-meta.xml
<CustomField>
    <fullName>Market_Unit_Formula__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Account__c)), 
    TEXT(Account__r.Market_Unit__c), 
    TEXT(Lead__r.Market_Unit__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Unit Formula</label>
    <type>Text</type>
</CustomField>