force-app/main/default/objects/Subscriptions__c/fields/Plan_Has_Trial__c.field-meta.xml
<CustomField>
    <fullName>Plan_Has_Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plan Has Trial</label>
    <type>Checkbox</type>
</CustomField>