force-app/main/default/objects/Subscriptions__c/fields/Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Plan_Name__c</fullName>
    <label>Plan Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>