force-app/main/default/objects/Subscriptions__c/fields/Reactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Reactivation_Date__c</fullName>
    <label>Reactivation Date</label>
    <type>DateTime</type>
</CustomField>