force-app/main/default/objects/Subscriptions__c/fields/Related_Record_Email__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Email__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Account__r.PersonContact.Email)),
  Account__r.PersonContact.Email,
  IF(
    NOT(ISBLANK(Lead__r.Email)),
    Lead__r.Email,
    &quot;&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Record Email</label>
    <type>Text</type>
</CustomField>