force-app/main/default/objects/Subscriptions__c/fields/Renewals__c.field-meta.xml
<CustomField>
    <fullName>Renewals__c</fullName>
    <label>Renewals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>