force-app/main/default/objects/Subscriptions__c/fields/Subscription_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Created_Date__c</fullName>
    <label>Subscription Created Date</label>
    <type>DateTime</type>
</CustomField>