force-app/main/default/objects/Subscriptions__c/fields/Subscription_handle__c.field-meta.xml
<CustomField>
    <fullName>Subscription_handle__c</fullName>
    <label>Subscription handle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>