force-app/main/default/objects/Subscriptions__c/fields/Subscriptions_Status__c.field-meta.xml
<CustomField>
    <fullName>Subscriptions_Status__c</fullName>
    <label>Subscriptions Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Ended</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Converted to Paid Subscription</fullName>
                <isActive>false</isActive>
                <label>Converted to Paid Subscription</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>