force-app/main/default/objects/Subscriptions__c/fields/Total_Subscription_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Subscription_Amount__c</fullName>
    <label>Total Subscription Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>