force-app/main/default/objects/Subscriptions__c/fields/Trial_Extended__c.field-meta.xml
<CustomField>
    <fullName>Trial_Extended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trial Extended</label>
    <type>Checkbox</type>
</CustomField>