force-app/main/default/objects/Subscriptions__c/fields/Trial_Extended_By_Days__c.field-meta.xml
<CustomField>
    <fullName>Trial_Extended_By_Days__c</fullName>
    <label>Trial Extended By (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>