force-app/main/default/objects/Subscriptions__c/fields/Trial_Extended_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Extended_Date__c</fullName>
    <label>Trial Extended Date</label>
    <type>DateTime</type>
</CustomField>