force-app/main/default/objects/Subscriptions__c/fields/Uncancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Uncancellation_Date__c</fullName>
    <label>Uncancellation Date</label>
    <type>DateTime</type>
</CustomField>