force-app/main/default/objects/Subscriptions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Subscriptions_Status__c</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <columns>Payments__c</columns>
    <columns>Plan_Name__c</columns>
    <columns>Plan_ID__c</columns>
    <columns>Trial_Start_Date__c</columns>
    <columns>Trial_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>