force-app/main/default/objects/Subscriptions__c/listViews/Cancelled_Subscriptions.listView-meta.xml
<ListView>
    <fullName>Cancelled_Subscriptions</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Subscriptions_Status__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Plan_Name__c</columns>
    <columns>Plan_ID__c</columns>
    <columns>Trial_Start_Date__c</columns>
    <columns>Trial_End_Date__c</columns>
    <columns>Next_Renewal_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subscriptions_Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>Cancelled Subscriptions</label>
</ListView>