force-app/main/default/objects/Subscriptions__c/listViews/Renewing_Next_Month.listView-meta.xml
<ListView>
    <fullName>Renewing_Next_Month</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Subscriptions_Status__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Plan_Name__c</columns>
    <columns>Plan_ID__c</columns>
    <columns>Trial_Start_Date__c</columns>
    <columns>Trial_End_Date__c</columns>
    <columns>Next_Renewal_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Renewal_Next_Month__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Renewing Next Month</label>
</ListView>