force-app/main/default/objects/Subscriptions__c/listViews/Swedish_DFJ_Memberships.listView-meta.xml
<ListView>
    <fullName>Swedish_DFJ_Memberships</fullName>
    <columns>NAME</columns>
    <columns>Subscriptions_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <columns>Payments__c</columns>
    <columns>Plan_Name__c</columns>
    <columns>Plan_ID__c</columns>
    <columns>Trial_Start_Date__c</columns>
    <columns>Trial_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Plan_ID__c</field>
        <operation>equals</operation>
        <value>plan-72416</value>
    </filters>
    <label>Swedish DFJ Memberships</label>
</ListView>